--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
     <body>
         <div id="main">
-            <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
+            <div id="error">Vixe, algo não funfou ai.(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
             <!-- <audio autoplay="autoplay" height="100" width="100"> -->
                     <!-- <source src="renxi.mp3" type="audio/mp3" /> -->
                     <!-- <embed height="100" width="100" src="renxi.mp3" /> -->
@@ -35,7 +35,7 @@
                       <span class="say">Minha Mulher</span><br>
                       <span class="say">Meu Amor</span><br>
                       <span class="say">Minha Namorada</span><br>
-                      <span class="say"><span class="space"></span>De seu garoto, Eduardo.</span> </font>
+                      <span class="say"></span>De seu garoto, Eduardo. </span></font>
                           <br />
                           <br />
                       </p>
