--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                       <span class="say">Minha Mulher</span><br>
                       <span class="say">Meu Amor</span><br>
                       <span class="say">Minha Namorada</span><br>
-                      <span class="say"></span>De seu garoto, Eduardo. </span></font>
+                      <span class="say">De seu garoto, Eduardo</span></font>
                           <br />
                           <br />
                       </p>
