--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                       <span class="say">Minha Razão de Viver</span><br>
                       <span class="say">Minha Mulher</span><br>
                       <span class="say">Meu Amor</span><br>
-                      <span class="say">Minha Namorada</span><br>
+                      <span class="say">Minha Namorada.</span><br>
                       <span class="say">De seu garoto, Eduardo</span></font>
                           <br />
                           <br />
