--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">Anna, eu te amo.</font>
-<span class="STYLE1">E eu sou seu a:</span>
+                    <span class="STYLE1"></span><font color="#33CC00">Anna, eu te amo, </font>
+<span class="STYLE1">e eu sou seu a:</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
